# Valka

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  build_clean.sh  build_linux_mac.sh  build_windows.sh  builder.sh
.github/workflows/: build.yml
docs/: mkdocs.yml
docs/docs/: examples.md  faq.md  getting_started.md  index.md  syntax.md
docs/site/: 404.html  index.html
docs/site/faq/: index.html
docs/site/getting_started/: index.html
docs/site/syntax/: index.html
examples/: index.html
faq/: index.html
include/: valka.h  valka_parser.h
include/misc/: defines.h  macros.h  types.h
lib/memory_lib/: CMakeLists.txt  Makefile
lib/memory_lib/include/: mymem.h
lib/memory_lib/src/: exit_cleanup.c
lib/memory_lib/src/garbage_collector/: free_ptr.c  garbage_hash.c  garbage_manager.c  save_ptr.c  size_ptr.c
samples/: array.vk  calc.vk  fibo.vk  fibo_10.vk  main.vlk  number_guesser.vk  printf.vk  return_int.vk  struct.vk  test.vk
search/: search_index.json
src/: main.c
src/core/llvm/: llvm_helper.c  llvm_linker.c  llvm_manager.c  llvm_string_collect.c
src/core/prepass/: def_replacer.c  prepass.c
src/parser/: function_prototype_helper.c  structure_prototype_helper.c
src/parser/ast/: ast_helper.c  ast_maker.c  ast_statement.c
src/parser/tokens/: token_after_call.c  token_helper.c  tokenizer.c
src/utils/: var_generator.c
src/utils/data/: data_helper.c  data_node.c  data_token.c  operator_helper.c
src/utils/definitions/: base_definitions.c  definitions_helper.c
src/utils/strings/: strdup.c  strndup.c
syntax/: index.html
(+54 files in other folders)
